2006-09-30  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/Makefile.am (CLEANFILES, dist-hook): Commented out, to
	reduce number of user reports from people without lex.

	* configure.in: Change from AC_PROG_LEX to AM_PROG_LEX.

	* src/Makefile.am (cscope_SOURCES): Added alloc.h.  Reindented.

	* src/invlib.c (invnewterm): Correct loop test to account for
	maxback being unsigned (SF bug #1559495).

	* src/Makefile.am (AM_CPPFLAGS): Renamed from INCLUDES, to quench
	an automake warning.

	* configure.in: Modernized via autoupdate.  Fixed several
	'underquoted' warnings from aclocal.  Use a more telling source
	file name in AC_CONFIG_SRCDIR.

	* configure, aclocal.m4, Makefile.in, contrib/Makefile.in,
	doc/Makefile.in, src/Makefile.in: Regenerated.

2006-08-20  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/find.c (findsymbol): Missed one place where s_len had to be
	initialized.
				  
	* src/main.c (tempstring): Parametrize length by new macro
	TEMPSTRING_LEN.
	(main): Check against too long -f file name.
	(main): Put explicit %s field widths into fscanf() call.
	(main): Replace some fscanf() calls by fgets().

	* src/input.c (shellpath): Limit size of strings copied from
	environment.

	* src/edit.c (editref, editall): Put explicit %s field widths into
	fscanf() calls.

	* src/display.c (display): Put explicit %s field widths into
	fscanf() call.

	* src/dir.c (makefilelist): Put explicit %s field width into
	sscanf() call.

	* src/constants.h (TEMPSTRING_LEN): New macro, needed to
	parametrize a fscanf() call.
	(STRINGIZE): New macro used to build the following.
	(PATLEN_STR, PATHLEN_STR, NUMLEN_STR, TEMPSTRING_LEN_STR): Buffer
	lengths (minus 1) expressed as a string literal, to be used in as
	field widths in {f,s}scanf() calls.

	* src/command.c (changestring): Put explicit %s field widths into
	fscanf() call.

	* src/build.c (samelist, build): fgets() replaces fscanf().
	(build): Put explicit %s field widths into fscanf() call.
